00 ex01 hpp cpp

--- a/00/ex01/Makefile
+++ b/00/ex01/Makefile
@@ -6,20 +6,21 @@
 #    By: yeonhlee <yeonhlee@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/24 02:29:26 by yeonhlee          #+#    #+#              #
-#    Updated: 2021/05/25 16:30:46 by yeonhlee         ###   ########.fr        #
+#    Updated: 2021/05/29 04:05:24 by yeonhlee         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	
+NAME	=	phonebook
 
 CC		=	clang++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
 
 RM		=	rm -rf
 
-INC		=	-I ./
+INC		=	-I ./includes
 
-SRCS	=	$(addprefix , megaphone.cpp \
+SRCS	=	$(addprefix ./srcs/, \
+			main.cpp \
 			)
 
 OBJS	=	$(SRCS:.cpp=.o)
