--- a/01/ex03/Makefile
+++ b/01/ex03/Makefile
@@ -6,11 +6,11 @@
 #    By: yeonhlee <yeonhlee@student.42seoul.kr>     +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2021/05/24 02:29:26 by yeonhlee          #+#    #+#              #
-#    Updated: 2021/06/03 00:45:33 by yeonhlee         ###   ########.fr        #
+#    Updated: 2021/06/08 18:25:56 by yeonhlee         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME	=	Zombie
+NAME	=	ZombieHorde
 
 CC		=	clang++
 CFLAGS	=	-Wall -Wextra -Werror -std=c++98
